--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8"
@@ -48,5 +47,8 @@
   "bugs": {
     "url": "https://github.com/BrianCho91/utube-clone/issues"
   },
-  "homepage": "https://github.com/BrianCho91/utube-clone#readme"
+  "homepage": "https://github.com/BrianCho91/utube-clone#readme",
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
+  }
 }
